# talim

./: .env.example  .gitignore  AGENTS.md  CENTRAL_PROGRESS.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  talim-architecture.md  talim-work-breakdown.md
config/: backtest_baselines.json  backtest_costs.json  cfd_instruments.json  risk.json
docs/: au200-backtest-baseline.md  au200-demo-soak.md  au200-soak-review-template.md  backtest-comparison-rules.md  backtest-cost-assumptions.md  backtest-data-strategy.md  backtest-monte-carlo.md  backtest-us500-runbook.md  cfd-soak-runbook.md  disaster-recovery.md  exchange-setup.md  forexcom-cfd-feasibility.md  ig-cfd-feasibility.md  indicator-research-batch-2.md  laptop-setup.md  live-demo-execution.md  openclaw-host-cutover-checklist.md  openclaw-operator-interface.md  openclaw-secrets-and-env.md  openclaw-talim-host-integration.md  operator-dashboard.md  poc-verification.md  polymarket-feasibility-gate.md  pre-2020-historical-data-options.md  runtime-sync.md  strategy-activation.md  strategy-authoring.md  vps-migration.md
nanoclaw/: Dockerfile  __init__.py  router.py
nginx/: nginx.conf
scripts/: _dukascopy_common.py  _ingest_common.py  backup.sh  build_atr_features.py  build_au200_dataset.py  build_bollinger_features.py  build_dukascopy_canonical_bars.py  build_ema_features.py  build_levels_table.py  build_macd_features.py  build_nearest_levels_features.py  build_rsi_features.py  cron.txt  healthcheck.sh  ig_market_discovery.py  import_backtest_results.py  ingest_databento.py  ingest_tardis.py  (+12 more)
(+223 files in other folders)
