[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talim"
version = "0.1.0"
description = "Agentic trading assistant powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite",
    "langchain-core>=0.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "ccxt>=4.0",
    "vectorbt>=0.26",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "discord.py>=2.4",
    "anthropic>=0.40",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.25",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
